--- a/environment.yml
+++ b/environment.yml
@@ -1,22 +1,27 @@
 name: sciborg_dev
 channels:
+  - pytorch
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - asttokens=2.0.5=pyhd3eb1b0_0
+  - blas=1.0=mkl
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2024.9.24=h06a4308_0
+  - ca-certificates=2024.11.26=h06a4308_0
   - comm=0.2.1=py311h06a4308_0
   - debugpy=1.6.7=py311h6a678d5_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - executing=0.8.3=pyhd3eb1b0_0
+  - faiss-cpu=1.9.0=py3.11_hadc1362_0_cpu
+  - intel-openmp=2023.1.0=hdb19cb5_46306
   - ipykernel=6.29.5=py311h06a4308_0
   - ipython=8.27.0=py311h06a4308_0
   - jedi=0.19.1=py311h06a4308_0
   - jupyter_client=8.6.0=py311h06a4308_0
   - jupyter_core=5.7.2=py311h06a4308_0
   - ld_impl_linux-64=2.40=h12ee557_0
+  - libfaiss=1.9.0=hf65b397_0_cpu
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
@@ -24,8 +29,14 @@ dependencies:
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
   - matplotlib-inline=0.1.6=py311h06a4308_0
+  - mkl=2023.1.0=h213fc3f_46344
+  - mkl-service=2.4.0=py311h5eee18b_1
+  - mkl_fft=1.3.11=py311h5eee18b_0
+  - mkl_random=1.2.8=py311ha02d727_0
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.6.0=py311h06a4308_0
+  - numpy=1.26.4=py311h08b1b3b_0
+  - numpy-base=1.26.4=py311hf175353_0
   - openssl=3.0.15=h5eee18b_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pexpect=4.8.0=pyhd3eb1b0_3
@@ -45,6 +56,7 @@ dependencies:
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.45.3=h5eee18b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
+  - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.14=h39e8969_0
   - tornado=6.4.1=py311h5eee18b_0
   - traitlets=5.14.3=py311h06a4308_0
@@ -85,7 +97,6 @@ dependencies:
       - marshmallow==3.23.1
       - multidict==6.1.0
       - mypy-extensions==1.0.0
-      - numpy==1.26.4
       - openai==1.55.1
       - orjson==3.10.12
       - packaging==24.2
