--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,7 @@ desktop.ini
 # ============================================
 helper_agent/archive/
 helper_agent/papers/archive/
+helper_agent/.env.example
 
 # Generic archive pattern
 archive/
