--- a/helper_agent/.env_example_file.example
+++ b/helper_agent/.env_example_file.example
@@ -1,3 +1,3 @@
 # OpenAI API Configuration
 # Copy this file to .env and add your actual API key
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY=add your API key here!!!
